<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:transitionName="container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="false"
>

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            android:fitsSystemWindows="true"    >


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Light" android:gravity="center_vertical">
            <TextView
                    android:id="@+id/toolbar_title"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:singleLine="false"
                    android:maxLines="1"
                    android:fontFamily="@font/exo_bold"
                    android:textColor="@color/black"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.legacy.widget.Space
                    android:id="@+id/space_appbar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/vv_trailer"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            <androidx.legacy.widget.Space
                    android:id="@+id/space_poster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/vv_trailer"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="@dimen/margin_padding_32dp"
                    android:contentDescription="@string/img_poster_desc"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"
                    android:transitionName="illusration"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/space_poster"

                    app:riv_corner_radius="5dp" />

            <TextView
                    android:id="@+id/tv_tittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:fontFamily="@font/exo_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@id/vv_trailer" />

            <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:fontFamily="@font/exo_bold"
                    android:maxLines="1"
                    android:textColor="@color/blackSoft"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_tittle" />


            <TextView
                    android:id="@+id/tv_score_tittle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_16dp"
                    android:fontFamily="@font/exo"
                    android:text="@string/user_score"
                    android:textColor="@color/blackSoft"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/exo"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_score_tittle" />

            <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rb_score"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3.23"
                    android:stepSize="0"
                    android:theme="@style/RatingBar"
                    app:layout_constraintBottom_toBottomOf="@id/tv_score"
                    app:layout_constraintStart_toEndOf="@id/tv_score" />

            <TextView
                    android:id="@+id/tv_synopsis_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_16dp"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo"
                    android:text="@string/synopsis"
                    android:textColor="@color/blackSoft"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_score" />

            <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    android:paddingBottom="@dimen/margin_padding_32dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_tittle" />

            <fragment
                    android:id="@+id/vv_trailer"
                    class="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"
                    android:transitionName="illusration"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            <TextView
                    android:id="@+id/tv_review_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_16dp"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo"
                    android:text="@string/reviews"
                    android:textColor="@color/blackSoft"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_padding_8dp"
                    android:paddingBottom="@dimen/margin_padding_8dp"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:clipToPadding="false"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_tittle"
                    />

            <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/colorPrimary"
                    android:layout_margin="@dimen/margin_padding_8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_review"
                    android:visibility="gone"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>