...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_row"
            android:paddingTop="16dp"
            android:clipToPadding="false"
            android:visibility="visible"
...
